--- a/view_module_picture/src/main/res/layout/maven_picture_item_camera_list.xml
+++ b/view_module_picture/src/main/res/layout/maven_picture_item_camera_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.taojiji.view.picture.weight.SquareFrameLayout
+<com.from.view.picture.weight.SquareFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -18,4 +18,4 @@
         android:textColor="@android:color/white"
         android:textSize="14sp" />
 
-</com.taojiji.view.picture.weight.SquareFrameLayout>
+</com.from.view.picture.weight.SquareFrameLayout>
