--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
-        android:onClick="onClick"
         android:id="@+id/btnPicDemo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="Picture 用法" />
 
     <Button
-        android:onClick="onClick"
         android:id="@+id/btnHttpDemo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="http 用法" />
+        android:onClick="onClick"
+        android:text="网络用法" />
 
 
 </LinearLayout>
