feat：1.添加选择图片时大小限制，超出限制toast提示。2.预览大图时增加图片大小显示

--- a/view_module_picture/src/main/res/layout/maven_picture_activity_preview_image.xml
+++ b/view_module_picture/src/main/res/layout/maven_picture_activity_preview_image.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/maven_picture_theme_bg_color">
 
     <com.from.view.picture.weight.FixViewPager
@@ -18,6 +19,14 @@
         android:layout_gravity="bottom"
         android:background="@color/maven_picture_theme_color">
 
+        <TextView
+            android:id="@+id/tv_size"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center|left"
+            android:paddingLeft="12dp"
+            android:textColor="@android:color/white"
+            tools:text="20M" />
         <com.from.view.picture.weight.SuperCheckBox
             android:id="@+id/preview_checkbox"
             style="@style/maven_picture_SuperCheckboxTheme"
