--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,9 @@
             android:onClick="onClick"
             android:text="网络用法" />
 
+
+        <me.businesscomponent.view.MyButtom
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </ScrollView>
